# jenkins-test

./: .gitignore  CMakeLists.txt  buildJob.jenkins  dynamic_allocator.h  foo.h  main.cpp  static_allocator.h  test.cpp  test.s  wrapper.h
CI/: Dockerfile  Untitled Diagram.drawio  docker_job.jenkins  std_example_pipline.jenkins
bar/: bar.cpp
foo/: foo.cpp
libsrc/: CMakeLists.txt  libsrc.cpp  libsrc.h
subProject/: CMakeLists.txt  sub_foo.cpp  sub_foo.h
tests/: CMakeLists.txt  test.cpp
